--- a/src/css/style-banner.less
+++ b/src/css/style-banner.less
@@ -1,15 +1,3 @@
-*{margin: 0;padding: 0;}
-body{
-    overflow: hidden;
-}
-#footer{
-    width: 100%;
-    margin-top: 50px;
-    text-align: center;
-    color: #333;
-    font-family: "Microsoft Yahei";
-    font-size: 14px;
-}
 .transition(@transition) {
   -webkit-transition:@transition;
   -moz-transition:@transition;
@@ -35,7 +23,6 @@ body{
     margin: 0 auto;
     cursor: pointer;
     z-index: 2;
-    // background-image: url(../img/banner/1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     li{
@@ -46,7 +33,7 @@ body{
             width: 100%;
         }
     }
-    li.current{
+    .mod-banner__current{
         display: block;
     }
 }
@@ -79,7 +66,7 @@ body{
                 background: #39c;
             }
         }
-        .current{
+        .mod-banner__current{
             width: 24px;
             background: #39c;
             border: solid 2px #39c;
